clang/test/BSC/Negative/Method/definition_4/definition_4.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

int void::getA() { // expected-error {{variable has incomplete type 'void'}}
  return 0;
}

int main() {
  return 0;
}
